# MyFirstCppLib

./: .gitignore  CMakeLists.txt  README.adoc
src/: library.cpp  library.h
test/: testAddition.cpp
